add homepage styles

--- a/index.html
+++ b/index.html
@@ -11,57 +11,43 @@
         <h1>What Brand Are You?</h1>
     </header>
 
-    <div class="container">
-        <ul class="slideshow">
-            <li class="slide">
-                <div class="cover"></div>
-                <a href="jan"></a>
-            </li>
-            <li class="slide">
-                <div class="cover"></div>
-                <a href="feb"></a>
-            </li>
-            <li class="slide">
-                <div class="cover"></div>
-                <a href="mar"></a>
-            </li>
-            <li class="slide">
-                <div class="cover"></div>
-                <a href="apr"></a>
-            </li>
-            <li class="slide">
-                <div class="cover"></div>
-                <a href="may"></a>
-            </li>
-            <li class="slide">
-                <div class="cover"></div>
-                <a href="jun"></a>
-            </li>
-            <li class="slide">
-                <div class="cover"></div>
-                <a href="jul"></a>
-            </li>
-            <li class="slide">
-                <div class="cover"></div>
-                <a href="aug"></a>
-            </li>
-            <li class="slide">
-                <div class="cover"></div>
-                <a href="sep"></a>
-            </li>
-            <li class="slide">
-                <div class="cover"></div>
-                <a href="oct"></a>
-            </li>
-            <li class="slide">
-                <div class="cover"></div>
-                <a href="nov"></a>
-            </li>
-            <li class="slide">
-                <div class="cover"></div>
-                <a href="dec"></a>
-            </li>
-        </ul>
+    <div class="grid-container">
+        <a href="" class="grid-item">
+            <img src="" alt="img1">
+        </a>
+        <a href="" class="grid-item">
+            <img src="" alt="img2">
+        </a>
+        <a href="" class="grid-item">
+            <img src="" alt="img2">
+        </a>
+        <a href="" class="grid-item">
+            <img src="" alt="img2">
+        </a>
+        <a href="" class="grid-item">
+            <img src="" alt="img2">
+        </a>
+        <a href="" class="grid-item">
+            <img src="" alt="img2">
+        </a>
+        <a href="" class="grid-item">
+            <img src="" alt="img2">
+        </a>
+        <a href="" class="grid-item">
+            <img src="" alt="img2">
+        </a>
+        <a href="" class="grid-item">
+            <img src="" alt="img2">
+        </a>
+        <a href="" class="grid-item">
+            <img src="" alt="img2">
+        </a>
+        <a href="" class="grid-item">
+            <img src="" alt="img2">
+        </a>
+        <a href="" class="grid-item">
+            <img src="" alt="img2">
+        </a>
     </div>
 
     <section>
