add web styles and images

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link charset="utf-8" href="index.css" media="screen" rel="stylesheet"/>
+    <link charset="utf-8" href="css/index.css" media="screen" rel="stylesheet"/>
 </head>
 <body>
     <header>
@@ -13,40 +13,40 @@
 
     <div class="grid-container">
         <a href="" class="grid-item">
-            <img src="" alt="img1">
+            <img src="/images/acne.png" alt="img1">
         </a>
         <a href="" class="grid-item">
-            <img src="" alt="img2">
+            <img src="/images/cdg.png" alt="img2">
         </a>
         <a href="" class="grid-item">
-            <img src="" alt="img2">
+            <img src="/images/chopova.png" alt="img2">
         </a>
         <a href="" class="grid-item">
-            <img src="" alt="img2">
+            <img src="/images/issey.png" alt="img2">
         </a>
         <a href="" class="grid-item">
-            <img src="" alt="img2">
+            <img src="/images/west.png" alt="img2">
         </a>
         <a href="" class="grid-item">
-            <img src="" alt="img2">
+            <img src="/images/latta.png" alt="img2">
         </a>
         <a href="" class="grid-item">
-            <img src="" alt="img2">
+            <img src="/images/mcqueen.png" alt="img2">
         </a>
         <a href="" class="grid-item">
-            <img src="" alt="img2">
+            <img src="/images/otto.png" alt="img2">
         </a>
         <a href="" class="grid-item">
-            <img src="" alt="img2">
+            <img src="/images/raf.png" alt="img2">
         </a>
         <a href="" class="grid-item">
-            <img src="" alt="img2">
+            <img src="/images/rick.png" alt="img2">
         </a>
         <a href="" class="grid-item">
-            <img src="" alt="img2">
+            <img src="/images/simone.png" alt="img2">
         </a>
         <a href="" class="grid-item">
-            <img src="" alt="img2">
+            <img src="/images/telfar.png" alt="img2">
         </a>
     </div>
 
