add subpage styles

--- a/subpage.html
+++ b/subpage.html
@@ -3,10 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Name</title>
-    <link charset="utf-8" href="css/subpages.css" media="screen" rel="stylesheet"/>
+    <title>Brand Name</title>
+    <link charset="utf-8" href="css/subpage.css" media="screen" rel="stylesheet"/>
 </head>
 <body>
-
+    
+    <div class="grid-container">
+        <div class="grid-item">
+            <a href="index.html"><img class="back-button" src="svg/grid.svg"></a>
+            <!-- svg zod -->
+            <!-- svg brand -->
+            <div id="text">
+                <h3>zodiac</h3>
+                <p>description</p>
+                <a href="brandlink">Visit Brand</a>
+            </div>
+            <!-- <a href="/index.html"><img class="back-button" src="svg/back.svg"></a> -->
+        </div>
+        <div class="grid-item" id="gallery">
+            <div class="photo" style="background-image: url('https://placehold.co/600x400');"></div>
+            <div class="photo" style="background-image: url('https://placehold.co/400x500/808080/FFF');"></div>
+            <div class="photo" style="background-image: url('https://placehold.co/500x700');"></div>
+            <div class="photo" style="background-image: url('https://placehold.co/600x400/808080/FFF');"></div>
+            <div class="photo" style="background-image: url('https://placehold.co/600x400');"></div>
+        </div>
+    </div>
 </body>
+<script>
+
+</script>
 </html>
