--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
 
     <div class="grid-container">
-        <a href="" class="grid-item">
+        <a href="/subpage.html" class="grid-item">
             <img src="/images/acne.png" alt="img1">
         </a>
         <a href="" class="grid-item">
