replace brand image

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <img src="/images/simone.png" alt="img2">
         </a>
         <a href="" class="grid-item">
-            <img src="/images/telfar.png" alt="img2">
+            <img src="/images/martine-rose.png" alt="img2">
         </a>
     </div>
 
