add gallery images

--- a/subpage.html
+++ b/subpage.html
@@ -21,11 +21,11 @@
             <!-- <a href="/index.html"><img class="back-button" src="svg/back.svg"></a> -->
         </div>
         <div class="grid-item" id="gallery">
-            <div class="photo" style="background-image: url('https://placehold.co/600x400');"></div>
-            <div class="photo" style="background-image: url('https://placehold.co/400x500/808080/FFF');"></div>
-            <div class="photo" style="background-image: url('https://placehold.co/500x700');"></div>
-            <div class="photo" style="background-image: url('https://placehold.co/600x400/808080/FFF');"></div>
-            <div class="photo" style="background-image: url('https://placehold.co/600x400');"></div>
+            <div class="photo" style="background-image: url('/images/content/raf-1.jpeg');"></div>
+            <div class="photo" style="background-image: url('/images/content/raf-2.jpeg');"></div>
+            <div class="photo" style="background-image: url('/images/content/raf-3.webp');"></div>
+            <div class="photo" style="background-image: url('/images/content/raf-4.jpeg');"></div>
+            <div class="photo" style="background-image: url('/images/content/raf-5.jpg');"></div>
         </div>
     </div>
 </body>
