add subpage styles

--- a/rafsimons.html
+++ b/rafsimons.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brand Name</title>
+    <title>Raf Simons</title>
     <link charset="utf-8" href="css/subpage.css" media="screen" rel="stylesheet"/>
 </head>
 <body>
@@ -16,16 +16,19 @@
             <div id="text">
                 <h3>zodiac</h3>
                 <p>description</p>
-                <a href="brandlink">Visit Brand</a>
+                <a href="/brandlink">Visit Raf Simons</a>
             </div>
             <!-- <a href="/index.html"><img class="back-button" src="svg/back.svg"></a> -->
         </div>
         <div class="grid-item" id="gallery">
-            <div class="photo" style="background-image: url('/images/content/raf-1.jpeg');"></div>
-            <div class="photo" style="background-image: url('/images/content/raf-2.jpeg');"></div>
-            <div class="photo" style="background-image: url('/images/content/raf-3.webp');"></div>
-            <div class="photo" style="background-image: url('/images/content/raf-4.jpeg');"></div>
-            <div class="photo" style="background-image: url('/images/content/raf-5.jpg');"></div>
+            <div class="gallery-content">
+                <!-- size classes for each image -->
+                <div class="photo" style="background-image: url('/images/content/raf-1.jpeg'); min-height: 700px;"></div>
+                <div class="photo" style="background-image: url('/images/content/raf-2.jpeg');"></div>
+                <div class="photo" style="background-image: url('/images/content/raf-3.webp');"></div>
+                <div class="photo" style="background-image: url('/images/content/raf-4.jpeg');"></div>
+                <div class="photo" style="background-image: url('/images/content/raf-5.jpg');"></div>
+            </div>
         </div>
     </div>
 </body>
