add zodiac images and subpage styles

--- a/rafsimons.html
+++ b/rafsimons.html
@@ -9,18 +9,19 @@
 <body>
     
     <div class="grid-container">
-        <div class="grid-item">
+        <div id="description" class="grid-item">
             <a href="index.html"><img class="back-button" src="svg/grid.svg"></a>
-            <!-- svg zod -->
-            <!-- svg brand -->
+            <div class="brand-header">
+                <img id="zodiac" class="svg" src="svg/aries.svg">
+                <img id="logo" class="svg" src="svg/raf_simons.svg">
+            </div>
             <div id="text">
-                <h3>zodiac</h3>
+                <h3>Aries</h3>
                 <p>description</p>
                 <a href="/brandlink">Visit Raf Simons</a>
             </div>
-            <!-- <a href="/index.html"><img class="back-button" src="svg/back.svg"></a> -->
         </div>
-        <div class="grid-item" id="gallery">
+        <div id="gallery" class="grid-item">
             <div class="gallery-content">
                 <!-- size classes for each image -->
                 <div class="photo" style="background-image: url('/images/content/raf-1.jpeg'); min-height: 700px;"></div>
