--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a href="" class="grid-item">
             <img src="/images/otto.png" alt="img2">
         </a>
-        <a href="/subpage.html" class="grid-item">
+        <a href="/rafsimons.html" class="grid-item">
             <img src="/images/raf.png" alt="img2">
         </a>
         <a href="" class="grid-item">
