--- a/index.html
+++ b/index.html
@@ -57,12 +57,19 @@
                 <input type="date" name="birthday" required />
             </div>
             <div class="control">
-                <button type="submit">Submit</button>
+                <button class="form-btn" type="submit">Submit</button>
             </div>
             <ul class="errors" hidden></ul>
         </form>
     </section>
     
+    <button class="help-btn" onclick="on()"><img src="/svg/help.svg"></button>
+    <div id="overlay" onclick="off()">
+        <div id="overlay-text">
+            <p>Overlay Text</p>
+        </div>
+        <a class="close" href="#">&times;</a>
+    </div>
 </body>
 <script src="index.js"></script>
 
