--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     <button class="help-btn" onclick="on()"><img src="/svg/help.svg"></button>
     <div id="overlay" onclick="off()">
         <div id="overlay-text">
-            <p>Overlay Text</p>
+            <h3>Page Accessibility</h3>
+            <p>Type or select a valid birthday in the field or click on a card to view a brand page.</p>
         </div>
-        <a class="close" href="#">&times;</a>
     </div>
 </body>
 <script src="index.js"></script>
