add subpage layout and styles

--- a/rafsimons.html
+++ b/rafsimons.html
@@ -7,9 +7,8 @@
     <link charset="utf-8" href="css/subpage.css" media="screen" rel="stylesheet"/>
 </head>
 <body>
-    
-    <div class="grid-container">
-        <div id="description" class="grid-item">
+    <div class="grid-container" >
+        <div id="description" class="grid-item" >
             <a href="index.html"><img class="back-button" src="svg/grid.svg"></a>
             <div class="brand-header">
                 <img id="zodiac" class="svg" src="svg/aries.svg">
@@ -17,23 +16,25 @@
             </div>
             <div id="text">
                 <h3>Aries</h3>
-                <p>description</p>
-                <a href="/brandlink">Visit Raf Simons</a>
+                <p> Avant-garde meets minimalist elegance with a focus on sharp tailoring, 
+                    innovative silhouettes, and an exploration of youth culture and contemporary art.</p>
+                <p>Aries are known for their boldness and individuality, much like Raf Simons' avant-garde 
+                    and innovative designs that push the boundaries of fashion.</p>
+                <p>Visit <a href="/brandlink">Raf Simons</a></p>
             </div>
         </div>
         <div id="gallery" class="grid-item">
             <div class="gallery-content">
-                <!-- size classes for each image -->
-                <div class="photo" style="background-image: url('/images/content/raf-1.jpeg'); min-height: 700px;"></div>
-                <div class="photo" style="background-image: url('/images/content/raf-2.jpeg');"></div>
-                <div class="photo" style="background-image: url('/images/content/raf-3.webp');"></div>
-                <div class="photo" style="background-image: url('/images/content/raf-4.jpeg');"></div>
-                <div class="photo" style="background-image: url('/images/content/raf-5.jpg');"></div>
+                <div class="photo portrait" style="background-image: url('/images/content/raf-1.jpeg');"></div>
+                <div class="photo landscape" style="background-image: url('/images/content/raf-2.jpeg');"></div>
+                <div class="photo portrait" style="background-image: url('/images/content/raf-4.jpeg');"></div>
+                <div class="photo landscape" style="background-image: url('/images/content/raf-3.webp');"></div>
+                <div class="photo portrait" style="background-image: url('/images/content/raf-5.jpg');"></div>
             </div>
         </div>
     </div>
 </body>
-<script>
 
-</script>
+<script src="subpage.js"></script>
+
 </html>
