add brand link and hide scrollbar

--- a/rafsimons.html
+++ b/rafsimons.html
@@ -20,7 +20,7 @@
                     innovative silhouettes, and an exploration of youth culture and contemporary art.</p>
                 <p>Aries are known for their boldness and individuality, much like Raf Simons' avant-garde 
                     and innovative designs that push the boundaries of fashion.</p>
-                <p>Visit <a href="/brandlink">Raf Simons</a></p>
+                <p>Visit <a href="https://rafsimons.com/" target="_blank">Raf Simons</a></p>
             </div>
         </div>
         <div id="gallery" class="grid-item">
