add subpage content + edit images and svgs

--- a/index.html
+++ b/index.html
@@ -12,41 +12,41 @@
     </header>
 
     <div class="grid-container">
-        <a href="" class="grid-item">
-            <img src="/images/acne.png" alt="img1">
+        <a href="subpages/rafsimons.html" class="grid-item">
+            <img src="/images/raf.png" alt="Raf Simons">
         </a>
-        <a href="" class="grid-item">
-            <img src="/images/cdg.png" alt="img2">
+        <a href="subpages/rocha.html" class="grid-item">
+            <img src="/images/simone.png" alt="Simone Rocha">
         </a>
-        <a href="" class="grid-item">
-            <img src="/images/chopova.png" alt="img2">
+        <a href="subpages/chopova.html" class="grid-item">
+            <img src="/images/chopova.png" alt="Chopova Lowena">
         </a>
-        <a href="" class="grid-item">
-            <img src="/images/issey.png" alt="img2">
+        <a href="subpages/rose.html" class="grid-item">
+            <img src="/images/martine-rose.png" alt="Martine Rose">
         </a>
-        <a href="" class="grid-item">
-            <img src="/images/west.png" alt="img2">
+        <a href="subpages/acne.html" class="grid-item">
+            <img src="/images/acne.png" alt="Acne Studios">
         </a>
-        <a href="" class="grid-item">
-            <img src="/images/latta.png" alt="img2">
+        <a href="subpages/cdg.html" class="grid-item">
+            <img src="/images/cdg.png" alt="Comme des Garcons">
         </a>
-        <a href="" class="grid-item">
-            <img src="/images/mcqueen.png" alt="img2">
+        <a href="subpages/issey.html" class="grid-item">
+            <img src="/images/issey.png" alt="Issey Miyake">
         </a>
-        <a href="" class="grid-item">
-            <img src="/images/otto.png" alt="img2">
+        <a href="subpages/rickowens.html" class="grid-item">
+            <img src="/images/rick.png" alt="Rick Owens">
         </a>
-        <a href="/rafsimons.html" class="grid-item">
-            <img src="/images/raf.png" alt="img2">
+        <a href="subpages/margiela.html" class="grid-item">
+            <img src="/images/margiela.png" alt="Maison Margiela">
         </a>
-        <a href="" class="grid-item">
-            <img src="/images/rick.png" alt="img2">
+        <a href="subpages/ottolinger.html" class="grid-item">
+            <img src="/images/otto.png" alt="Ottolinger">
         </a>
-        <a href="" class="grid-item">
-            <img src="/images/simone.png" alt="img2">
+        <a href="subpages/westwood.html" class="grid-item">
+            <img src="/images/west.png" alt="Vivienne Westwood">
         </a>
-        <a href="" class="grid-item">
-            <img src="/images/martine-rose.png" alt="img2">
+        <a href="subpages/mcqueen.html" class="grid-item">
+            <img src="/images/mcqueen.png" alt="Alexander McQueen">
         </a>
     </div>
 
