--- a/subpages/rafsimons.html
+++ b/subpages/rafsimons.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Raf Simons</title>
-    <link charset="utf-8" href="css/subpage.css" media="screen" rel="stylesheet"/>
+    <link charset="utf-8" href="/css/subpage.css" media="screen" rel="stylesheet"/>
 </head>
 <body>
     <div class="grid-container" >
         <div id="description" class="grid-item" >
-            <a href="index.html"><img class="back-button" src="svg/grid.svg"></a>
+            <a href="/index.html"><img class="back-button" src="/svg/grid.svg"></a>
             <div class="brand-header">
-                <img id="zodiac" class="svg" src="svg/aries.svg">
-                <img id="logo" class="svg" src="svg/raf_simons.svg">
+                <img id="zodiac" class="svg" src="/svg/aries.svg">
+                <img id="logo" class="svg" src="/svg/raf_simons.svg">
             </div>
             <div id="text">
                 <h3>Aries</h3>
@@ -35,6 +35,6 @@
     </div>
 </body>
 
-<script src="subpage.js"></script>
+<script src="/subpage.js"></script>
 
 </html>
