--- a/index.html
+++ b/index.html
@@ -12,40 +12,40 @@
     </header>
 
     <div class="grid-container">
-        <a href="subpages/rafsimons.html" class="grid-item">
+        <a href="subpages/aries.html" class="grid-item">
             <img src="/images/raf.png" alt="Raf Simons">
         </a>
-        <a href="subpages/rocha.html" class="grid-item">
+        <a href="subpages/taurus.html" class="grid-item">
             <img src="/images/simone.png" alt="Simone Rocha">
         </a>
-        <a href="subpages/chopova.html" class="grid-item">
+        <a href="subpages/gemini.html" class="grid-item">
             <img src="/images/chopova.png" alt="Chopova Lowena">
         </a>
-        <a href="subpages/rose.html" class="grid-item">
+        <a href="subpages/cancer.html" class="grid-item">
             <img src="/images/martine-rose.png" alt="Martine Rose">
         </a>
-        <a href="subpages/acne.html" class="grid-item">
+        <a href="subpages/leo.html" class="grid-item">
             <img src="/images/acne.png" alt="Acne Studios">
         </a>
-        <a href="subpages/cdg.html" class="grid-item">
+        <a href="subpages/virgo.html" class="grid-item">
             <img src="/images/cdg.png" alt="Comme des Garcons">
         </a>
-        <a href="subpages/issey.html" class="grid-item">
+        <a href="subpages/libra.html" class="grid-item">
             <img src="/images/issey.png" alt="Issey Miyake">
         </a>
-        <a href="subpages/rickowens.html" class="grid-item">
+        <a href="subpages/scorpio.html" class="grid-item">
             <img src="/images/rick.png" alt="Rick Owens">
         </a>
-        <a href="subpages/margiela.html" class="grid-item">
+        <a href="subpages/sagittarius.html" class="grid-item">
             <img src="/images/margiela.png" alt="Maison Margiela">
         </a>
-        <a href="subpages/ottolinger.html" class="grid-item">
+        <a href="subpages/capricorn.html" class="grid-item">
             <img src="/images/otto.png" alt="Ottolinger">
         </a>
-        <a href="subpages/westwood.html" class="grid-item">
+        <a href="subpages/aquarius.html" class="grid-item">
             <img src="/images/west.png" alt="Vivienne Westwood">
         </a>
-        <a href="subpages/mcqueen.html" class="grid-item">
+        <a href="subpages/pisces.html" class="grid-item">
             <img src="/images/mcqueen.png" alt="Alexander McQueen">
         </a>
     </div>
