--- a/subpages/libra.html
+++ b/subpages/libra.html
@@ -27,12 +27,15 @@
             <div class="gallery-content">
                 <div class="photo portrait" style="background-image: url('/images/content/issey-1.jpeg');"></div>
                 <div class="photo landscape" style="background-image: url('/images/content/issey-2.webp');"></div>
-                <div class="photo portrait" style="background-image: url('/images/content/issey-3.jpeg');"></div>
                 <div class="photo landscape" style="background-image: url('/images/content/issey-4.avif');"></div>
-                <div class="photo portrait" style="background-image: url('/images/content/issey-5.webp');"></div>
+                <div class="photo portrait" style="background-image: url('/images/content/issey-3.jpeg');"></div>
+                <div class="photo landscape" style="background-image: url('/images/content/issey-5.webp');"></div>
             </div>
         </div>
     </div>
+
+    <!-- sound clip -->
+    <audio id="soundClip" src="/sounds/issey.mp3" preload="auto" autoplay></audio>
 </body>
 
 <script src="/subpage.js"></script>
