--- a/subpages/aquarius.html
+++ b/subpages/aquarius.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brand Name</title>
+    <title>Aquarius</title>
     <link charset="utf-8" href="/css/subpage.css" media="screen" rel="stylesheet"/>
 </head>
 <body>
@@ -33,6 +33,9 @@
             </div>
         </div>
     </div>
+
+    <!-- sound clip -->
+    <audio id="soundClip" src="/sounds/westwood.mp3" preload="auto" autoplay></audio>
 </body>
 
 <script src="/subpage.js"></script>
