--- a/subpages/leo.html
+++ b/subpages/leo.html
@@ -33,6 +33,9 @@
             </div>
         </div>
     </div>
+
+    <!-- sound clip -->
+    <audio id="soundClip" src="/sounds/acne.mp3" preload="auto" autoplay></audio>
 </body>
 
 <script src="/subpage.js"></script>
