--- a/subpages/pisces.html
+++ b/subpages/pisces.html
@@ -37,6 +37,9 @@
             </div>
         </div>
     </div>
+
+    <!-- sound clip -->
+    <audio id="soundClip" src="/sounds/mcqueen.mp3" preload="auto" autoplay></audio>
 </body>
 
 <script src="/subpage.js"></script>
