add custom subpage background colors

--- a/subpages/cancer.html
+++ b/subpages/cancer.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cancer</title>
     <link charset="utf-8" href="/css/subpage.css" media="screen" rel="stylesheet"/>
+    <link rel="icon" type="image/x-icon" href="/svg/cancer.svg">
 </head>
-<body>
+<body class="cancer-bg">
     <div class="grid-container" >
         <div id="description" class="grid-item" >
             <a href="/index.html"><img class="back-button" src="/svg/grid.svg"></a>
@@ -19,10 +20,8 @@
                 <p>Subversive and streetwear-infused, blending elements of traditional menswear with a contemporary urban edge, characterized by bold graphics, 
                     unexpected proportions, and a nod to British subcultures.</p>
                 <p>Cancers are known for their nurturing nature, emotional depth, and attachment to home and tradition. 
-                    Martine Rose's brand often reflects a sense of intimacy and community, much like Cancer's emphasis on family and close relationships. 
-                    The brand's designs can evoke a sense of nostalgia and familiarity, drawing inspiration from cultural references and subcultures. 
-                    Martine Rose's aesthetic embraces individuality and authenticity, celebrating the unique identities of each person, 
-                    which resonates with Cancer's appreciation for personal connections and emotional expression.</p>
+                    Martine Rose's brand often reflects a sense of intimacy and community, much like Cancer's emphasis on family, close relationships, 
+                    personal connections, and emotional expression.</p>
                 <p>Visit <a href="/brandlink" target="_blank">Martine Rose</a></p>
             </div>
         </div>
