--- a/subpages/pisces.html
+++ b/subpages/pisces.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brand Name</title>
+    <title>Pisces</title>
     <link charset="utf-8" href="/css/subpage.css" media="screen" rel="stylesheet"/>
+    <link rel="icon" type="image/x-icon" href="/svg/pisces.svg">
 </head>
-<body>
+<body class="pisces-bg">
     <div class="grid-container" >
         <div id="description" class="grid-item" >
             <a href="/index.html"><img class="back-button" src="/svg/grid.svg"></a>
@@ -20,9 +21,7 @@
                     Alexander McQueen is known for its darkly romantic aesthetic and impeccable craftsmanship.</p>
                 <p>Pisces are known for their creativity, sensitivity, and affinity for the mystical and ethereal, 
                     which aligns well with Alexander McQueen's designs. McQueen's brand often incorporates elements of fantasy, 
-                    romanticism, and dark elegance, reflecting the Piscean inclination towards imagination and emotional depth. 
-                    The brand's collections often feature intricate detailing, dramatic silhouettes, and a juxtaposition of light and darkness, 
-                    resonating with the dreamy and intuitive nature of Pisces.</p>
+                    romanticism, and dark elegance, reflecting the Piscean inclination towards imagination and emotional depth.</p>
                 <p>Visit <a href="/brandlink" target="_blank">Alexander McQueen</a></p>
             </div>
         </div>
