--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link charset="utf-8" href="css/index.css" media="screen" rel="stylesheet"/>
+    <link rel="icon" type="image/x-icon" href="/svg/grid.svg">
 </head>
 <body>
     <header>
