--- a/subpages/aquarius.html
+++ b/subpages/aquarius.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aquarius</title>
     <link charset="utf-8" href="/css/subpage.css" media="screen" rel="stylesheet"/>
+    <link rel="icon" type="image/x-icon" href="/svg/aquarius.svg">
 </head>
-<body>
-    <div class="grid-container" >
+<body class="aqua-bg">
+    <div class="grid-container">
         <div id="description" class="grid-item" >
             <a href="/index.html"><img class="back-button" src="/svg/grid.svg"></a>
             <div class="brand-header">
