--- a/subpages/aries.html
+++ b/subpages/aries.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aries</title>
     <link charset="utf-8" href="/css/subpage.css" media="screen" rel="stylesheet"/>
+    <link rel="icon" type="image/x-icon" href="/svg/aries.svg">
 </head>
-<body>
+<body class="aries-bg"> 
     <div class="grid-container" >
         <div id="description" class="grid-item" >
             <a href="/index.html"><img class="back-button" src="/svg/grid.svg"></a>
