--- a/subpages/scorpio.html
+++ b/subpages/scorpio.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brand Name</title>
+    <title>Scorpio</title>
     <link charset="utf-8" href="/css/subpage.css" media="screen" rel="stylesheet"/>
+    <link rel="icon" type="image/x-icon" href="/svg/scorpio.svg">
 </head>
-<body>
+<body class="scorpio-bg">
     <div class="grid-container" >
         <div id="description" class="grid-item" >
             <a href="/index.html"><img class="back-button" src="/svg/grid.svg"></a>
