edit copy and add links

--- a/subpages/aquarius.html
+++ b/subpages/aquarius.html
@@ -19,9 +19,9 @@
                 <h3>Aquarius</h3>
                 <p>Punk-inspired and rebellious, with a distinct British flair, offering a mix of tartan prints, exaggerated silhouettes, 
                     and eclectic accessories that challenge convention and celebrate individuality.</p>
-                <p>Aquarius' eccentricity and individuality are mirrored in Vivienne Westwood's punk-inspired and rebellious designs, 
-                    which celebrate self-expression and challenge societal norms.</p>
-                <p>Visit <a href="/brandlink" target="_blank">Vivienne Westwood</a></p>
+                <p>Aquarius' eccentricity and commitment to individuality find resonance in Vivienne Westwood's essence, 
+                    reflecting a shared appreciation for self-expression and a determination to challenge the status quo.</p>
+                <p>Visit <a href="https://www.viviennewestwood.com/" target="_blank">Vivienne Westwood</a></p>
             </div>
         </div>
         <div id="gallery" class="grid-item">
