--- a/subpages/aries.html
+++ b/subpages/aries.html
@@ -17,10 +17,10 @@
             </div>
             <div id="text">
                 <h3>Aries</h3>
-                <p> Avant-garde meets minimalist elegance with a focus on sharp tailoring, 
-                    innovative silhouettes, and an exploration of youth culture and contemporary art.</p>
-                <p>Aries are known for their boldness and individuality, much like Raf Simons' avant-garde 
-                    and innovative designs that push the boundaries of fashion.</p>
+                <p> Avant-garde meets minimalist sophistication, emphasizing precise tailoring, inventive silhouettes, 
+                    and an exploration of youth culture and contemporary art.</p>
+                <p>Aries, known for their daring individuality and boldness, 
+                    parallel Raf Simons' avant-garde and inventive creations that redefine the boundaries of fashion.</p>
                 <p>Visit <a href="https://rafsimons.com/" target="_blank">Raf Simons</a></p>
             </div>
         </div>
