--- a/subpages/capricorn.html
+++ b/subpages/capricorn.html
@@ -18,10 +18,10 @@
             <div id="text">
                 <h3>Capricorn</h3>
                 <p>Edgy and experimental, embracing a raw and deconstructed aesthetic with a focus on handcrafted details, 
-                    unexpected fabric manipulations, and a fearless approach to silhouette and texture.</p>
-                <p>Capricorn's ambition and determination resonate with Ottolinger's edgy and experimental designs, 
-                    which often feature bold and daring elements that make a powerful statement.</p>
-                <p>Visit <a href="/brandlink" target="_blank">Ottolinger</a></p>
+                    unexpected fabric manipulations, and a daring approach to silhouette and texture.</p>
+                <p>Capricorn's ambition and determination align seamlessly with Ottolinger's ethos, 
+                    as both exhibit a drive for success and a bold willingness to make a powerful statement.</p>
+                <p>Visit <a href="https://www.ottolinger.com/" target="_blank">Ottolinger</a></p>
             </div>
         </div>
         <div id="gallery" class="grid-item">
