--- a/subpages/gemini.html
+++ b/subpages/gemini.html
@@ -19,9 +19,9 @@
                 <h3>Gemini</h3>
                 <p>Eclectic and vibrant, merging traditional Bulgarian craftsmanship with a modern, punk-inspired aesthetic, 
                     characterized by bold colors, mixed prints, and experimental silhouettes.</p>
-                <p>Gemini's dual nature is mirrored in Chopova Lowena's eclectic and vibrant designs, 
+                <p>Gemini's dual nature and tendency to embrace contradictions is mirrored in Chopova Lowena's eclectic and vibrant designs, 
                     which often combine contrasting elements to create a unique and dynamic style.</p>
-                <p>Visit <a href="/brandlink" target="_blank">Chopova Lowena</a></p>
+                <p>Visit <a href="https://www.chopovalowena.com/" target="_blank">Chopova Lowena</a></p>
             </div>
         </div>
         <div id="gallery" class="grid-item">
