--- a/subpages/leo.html
+++ b/subpages/leo.html
@@ -19,8 +19,9 @@
                 <h3>Leo</h3>
                 <p>Effortlessly cool and understated Scandinavian chic, offering clean lines, neutral palettes, 
                     and a balance of relaxed silhouettes with unexpected details and textures.</p>
-                <p>Leo's boldness and creativity align with Acne Studios' effortlessly cool and understated Scandinavian chic, 
-                    offering clean lines and unexpected details.</p>
+                <p>Leo's boldness and creativity resonate with Acne Studios' ethos. Born from the acronym, 
+                    "Ambition to Create Novel Expressions," the brand's distinctive aesthetic mirrors 
+                    Leo's penchant for daring expression and innovative flair.</p>
                 <p>Visit <a href="https://www.acnestudios.com/" target="_blank">Acne Studios</a></p>
             </div>
         </div>
