--- a/subpages/pisces.html
+++ b/subpages/pisces.html
@@ -20,9 +20,9 @@
                 <p>Renowned for its provocative, innovative, and theatrical designs that push the boundaries of fashion, 
                     Alexander McQueen is known for its darkly romantic aesthetic and impeccable craftsmanship.</p>
                 <p>Pisces are known for their creativity, sensitivity, and affinity for the mystical and ethereal, 
-                    which aligns well with Alexander McQueen's designs. McQueen's brand often incorporates elements of fantasy, 
-                    romanticism, and dark elegance, reflecting the Piscean inclination towards imagination and emotional depth.</p>
-                <p>Visit <a href="/brandlink" target="_blank">Alexander McQueen</a></p>
+                    which aligns well with Alexander McQueen's designs. McQueen often incorporates elements of fantasy, 
+                    romanticism, and dark elegance, reflecting the Piscean spirit.</p>
+                <p>Visit <a href="https://www.alexandermcqueen.com/" target="_blank">Alexander McQueen</a></p>
             </div>
         </div>
         <div id="gallery" class="grid-item">
