--- a/subpages/sagittarius.html
+++ b/subpages/sagittarius.html
@@ -19,9 +19,9 @@
                 <h3>Sagittarius</h3>
                 <p>Iconoclastic and cerebral, playing with ideas of deconstruction, anonymity, and reinvention through avant-garde designs, 
                     unconventional materials, and a focus on artisanal craftsmanship.</p>
-                <p>Sagittarius' philosophical and adventurous nature aligns well with Maison Margiela's iconoclastic and cerebral designs, 
+                <p>Sagittarius' philosophical and adventurous nature aligns well with Maison Margiela's ethos
                     which challenge conventions and embrace reinvention.</p>
-                <p>Visit <a href="/brandlink" target="_blank">Maison Margiela</a></p>
+                <p>Visit <a href="https://www.maisonmargiela.com/" target="_blank">Maison Margiela</a></p>
             </div>
         </div>
         <div id="gallery" class="grid-item">
