--- a/subpages/scorpio.html
+++ b/subpages/scorpio.html
@@ -19,9 +19,9 @@
                 <h3>Scorpio</h3>
                 <p>Dark, dramatic, and otherworldly, with a signature blend of gothic and futuristic elements, 
                     characterized by draped silhouettes, asymmetric cuts, and a monochromatic palette.</p>
-                <p>Scorpio's intensity and passion are reflected in Rick Owens' dark and dramatic aesthetic, 
-                    characterized by strong silhouettes and a fearless approach to style.</p>
-                <p>Visit <a href="/brandlink" target="_blank">Rick Owens</a></p>
+                <p>Rick Owens' fearless approach to form and strong silhouettes embodies Scorpio's intensity and passion, 
+                    reflecting their desire for authenticity and emotional depth.</p>
+                <p>Visit <a href="https://www.rickowens.eu/" target="_blank">Rick Owens</a></p>
             </div>
         </div>
         <div id="gallery" class="grid-item">
