--- a/subpages/taurus.html
+++ b/subpages/taurus.html
@@ -21,7 +21,7 @@
                     such as exaggerated proportions and deconstructed elements.</p>
                 <p>Taurus appreciates beauty and luxury, which aligns well with Simone Rocha's romantic yet 
                     luxurious aesthetic characterized by feminine details and intricate craftsmanship.</p>
-                <p>Visit <a href="/brandlink" target="_blank">Simone Rocha</a></p>
+                <p>Visit <a href="https://www.simonerocha.com/" target="_blank">Simone Rocha</a></p>
             </div>
         </div>
         <div id="gallery" class="grid-item">
