--- a/subpages/cancer.html
+++ b/subpages/cancer.html
@@ -20,9 +20,8 @@
                 <p>Subversive and streetwear-infused, blending elements of traditional menswear with a contemporary urban edge, characterized by bold graphics, 
                     unexpected proportions, and a nod to British subcultures.</p>
                 <p>Cancers are known for their nurturing nature, emotional depth, and attachment to home and tradition. 
-                    Martine Rose's brand often reflects a sense of intimacy and community, much like Cancer's emphasis on family, close relationships, 
-                    personal connections, and emotional expression.</p>
-                <p>Visit <a href="/brandlink" target="_blank">Martine Rose</a></p>
+                    Martine Rose often reflects a sense of intimacy and community, much like Cancer's emphasis on close bonds and emotional expression.</p>
+                <p>Visit <a href="https://www.martine-rose.com/" target="_blank">Martine Rose</a></p>
             </div>
         </div>
         <div id="gallery" class="grid-item">
