--- a/subpages/libra.html
+++ b/subpages/libra.html
@@ -19,9 +19,8 @@
                 <h3>Libra</h3>
                 <p>Architectural and innovative, known for technical precision and sculptural forms, 
                     often utilizing pleating techniques and experimental textiles to create garments that blur the line between fashion and art.</p>
-                <p>Libra values balance and harmony, much like Issey Miyake's architectural and innovative designs, 
-                    which achieve a perfect balance between form and function.</p>
-                <p>Visit <a href="/brandlink" target="_blank">Issey Miyake</a></p>
+                <p>Libra values balance and harmony, much like Miyake's ability to achieve a perfect equilibrium between form and function.</p>
+                <p>Visit <a href="https://www.isseymiyake.com/" target="_blank">Issey Miyake</a></p>
             </div>
         </div>
         <div id="gallery" class="grid-item">
