--- a/subpages/virgo.html
+++ b/subpages/virgo.html
@@ -17,11 +17,11 @@
             </div>
             <div id="text">
                 <h3>Virgo</h3>
-                <p>Conceptual and avant-garde, pushing the boundaries of fashion with deconstructed silhouettes, 
-                    asymmetry, and a playful approach to structure, texture, and proportion.</p>
-                <p>Virgo's attention to detail and analytical nature aligns well with Comme des Garçons' conceptual and avant-garde designs, 
-                    which often feature intricate craftsmanship and experimental techniques.</p>
-                <p>Visit <a href="/brandlink" target="_blank">Comme des Garçons</a></p>
+                <p>Conceptual and avant-garde designs, characterized by deconstructed silhouettes, asymmetry, 
+                    and a playful approach to structure, texture, and proportion.</p>
+                <p>Comme des Garçons aligns well with Virgo's attention to detail and analytical nature. 
+                    The brand's intricate craftsmanship and experimental techniques resonate with Virgo's cerebral mindset.</p>
+                <p>Visit <a href="https://www.comme-des-garcons.com/" target="_blank">Comme des Garçons</a></p>
             </div>
         </div>
         <div id="gallery" class="grid-item">
